cmake_minimum_required(VERSION 3.20)

option(MIRU_SUBMODULE "Directory to VulkanSDK" OFF)

if(NOT MIRU_SUBMODULE)
	project(MIRU)
endif()

set(MIRU_VULKAN_SDK_DIR $ENV{VULKAN_SDK} CACHE STRING "Directory to VulkanSDK" )

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets")
set(MIRU_FOLDER MIRU)

set(CMAKE_GENERATOR_PLATFORM Visual Studio 16 2019 Win64)
set(CMAKE_GENERATOR_TOOLSET v142, host=x64)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>")

include("CMakeFunctions.cmake")

add_subdirectory(MIRU_SHADER_COMPILER)
add_subdirectory(MIRU_CORE)
add_subdirectory(MIRU_TEST)